--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Banana",
+            "request": "launch",
+            "mainClass": "ProducerConsumer.Banana",
+            "projectName": "Programiranje3_bf8d977f"
+        },
+        {
+            "type": "java",
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "Main",
