--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "26102021/Maximalni_Element"
+        "26102021/Maximalni_Element",
+        "09112021/Philosophers",
+        "09112021/Semafor"
     ],
     "java.format.settings.url": "eclipse-formatter.xml"
 }
