--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "java.project.sourcePaths": [
         "26102021/Maximalni_Element",
-        "09112021/Philosophers",
-        "09112021/Semafor"
+        "09112021/Semafor",
+        "23112021/P2P/src"
     ],
     "java.format.settings.url": "eclipse-formatter.xml"
 }
